--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,7 @@
 title: Jonathan Alvarez Coloma
 logo: logo.jpg
 show_downloads: true
-theme: jekyll-theme-minimal
+##theme: jekyll-theme-minimal
+remote_theme: pages-themes/dinky@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
