--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,6 @@ title: Jonathan Alvarez Coloma
 logo: logo.jpg
 show_downloads: true
 ##theme: jekyll-theme-minimal
-remote_theme: pages-themes/dinky@v0.2.0
+remote_theme: pages-themes/hacker@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
