Actualizar datos nuevos en repo jonathan

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Jonathan Alvarez - Especialista en Redes y Ciberseguridad
 description: Portafolio profesional de Jonathan Alvarez, docente y especialista en redes, ciberseguridad y educación tecnológica
 
 baseurl: "" 
-url: "https://digitec-conexion.github.io"
+url: "https://jthnconti.github.io/portafoliojthn"
 
 remote_theme: pages-themes/hacker@v0.2.0
 
@@ -11,7 +11,7 @@ plugins:
   - jekyll-remote-theme
   - jekyll-seo-tag
   - jekyll-data
-  - jekyll-feed  # Recomendado añadir para RSS
+  - jekyll-feed
 
 # Configuración de defaults
 defaults:
@@ -20,9 +20,9 @@ defaults:
     values:
       layout: default
   - scope:
-      path: "./jonathan-alvarez/_data"  # Especifica que los archivos JSON son datos
+      path: "_data"  # Archivos JSON son datos
     values:
-      layout: null  # No usar layout para archivos de datos
+      layout: null
 
 # Configuración de procesamiento
 markdown: kramdown
@@ -31,23 +31,23 @@ sass:
   style: compressed
 
 # Configuración de datos
-
-data_source: "/portafolio_grupo_D_uc/jonathan-alvarez/_data"
+data_source: "_data"
 collections:
   data:
     output: false
-    path: "/portafolio_grupo_D_uc/jonathan-alvarez/_data"
+    path: "_data"
 
 include:
-  - "/portafolio_grupo_D_uc/jonathan-alvarez/_data/education.json"
-  - "/portafolio_grupo_D_uc/jonathan-alvarez/_data/experience.json"
-  - "/portafolio_grupo_D_uc/jonathan-alvarez/_data/projects.json"
-  - "/portafolio_grupo_D_uc/jonathan-alvarez/_data/skills.json"
+  - "_data/education.json"
+  - "_data/experience.json"
+  - "_data/projects.json"
+  - "_data/skills.json"
+
 # Configuración personalizada
 social:
   linkedin: jonathan-ac28
   email: jalvarezc@tecsup.edu.pe
-  github: jthnconti  # Añadido para enlace a GitHub
+  github: jthnconti
 
 # Configuración específica para GitHub Pages
 github: [metadata]
