--- a/.github/workflows/Gemfile
+++ b/.github/workflows/Gemfile
@@ -1,3 +1,3 @@
 source "https://rubygems.org"
-gem "jekyll", "~> 4.3"
-gem "github-pages", group: :jekyll_plugins
+gem "jekyll", "~> 4.3.3"  # Versión compatible con GitHub Pages
+gem "github-pages", "~> 228", group: :jekyll_plugins  # Versión estable reciente
