--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,13 +1,40 @@
 name: Deploy Jekyll to GitHub Pages
+
 on:
   push:
     branches: [main]
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: helaili/jekyll-action@2.2.0
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          target_branch: develop  # Rama para el despliegue
+          ruby-version: '3.1'  # Versión compatible con Jekyll 4.x
+          bundler-cache: true
+
+      - name: Install dependencies
+        run: |
+          gem install bundler
+          bundle config set --local path 'vendor/bundle'
+          bundle install
+
+      - name: Build with Jekyll
+        uses: jeffreytse/jekyll-actions@v2
+        with:
+          jekyll_src: './'
+          jekyll_cfg: '_config.yml'
+          jekyll_env: 'production'
+          pre_build_commands: 'bundle exec jekyll clean'
+          
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./_site
+          destination_dir: ./
+          keep_files: false
